--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.8.3",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.3",
+    "socket.io-client": "^2.2.0",
     "standard": "^12.0.1"
   }
 }
